--- a/index.html
+++ b/index.html
@@ -13,7 +13,28 @@
 </head>
 <body>
     
+    <!-- Number -->
 
+
+    <!-- End Number -->
+    <!-- Plan -->
+
+    <!-- End Plan -->
+    <!-- Video -->
+
+    <!-- End Video -->
+    <!-- Testimonial -->
+
+
+    <!-- End Testimonial -->
+    <!-- Email -->
+
+
+    <!-- End Email -->
+    <!-- Footer -->
+
+
+    <!-- End Footer -->
 
 
 
