--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
 <body>
     
     <!-- Number -->
+    <section class="number section">
+        <div class="number-container">
+            <div class="number-content">
+                <div class="number-item">
+                    <p class="counter">730</p>
+                    <p>Happy Clients</p>
+                </div>
+                <div class="number-item">
+                    <p><span class="counter">80</p>
+                    <p>Professionals</p>
+                </div>
+                <div class="number-item">
+                    <p class="counter">812</p>
+                    <p>Adopted Pets</p>
+                </div>
+                <div class="number-item">
+                    <p class="counter">90</p>
+                    <p>Awards</p>
+                </div>
+            </div>
+        </div>
 
+    </section> 
 
     <!-- End Number -->
     <!-- Plan -->
@@ -42,7 +64,13 @@
 
 
 
-
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./asset/js/jquery.countup.js"></script>
+    <script>
+         $('.counter').countUp();
+    </script>
 
     <!-- JS BS 4 -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
