--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pooch Care</title>
 
+
+
+    <!-- Google fonts -->  
+   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
+
+
     <!-- BS 4 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- CSS -->
@@ -14,7 +20,7 @@
 <body>
     
     <!-- Number -->
-    <section class="number section">
+    <section class="number ">
         <div class="number-container">
             <div class="number-content">
                 <div class="number-item">
