--- a/index.html
+++ b/index.html
@@ -20,33 +20,84 @@
 <body>
     
     <!-- Number -->
-    <section class="number ">
-        <div class="number-container">
+    <section class="number pb-50 pt-50">
+        <div class="container">
             <div class="number-content">
                 <div class="number-item">
                     <p class="counter">730</p>
-                    <p>Happy Clients</p>
+                    <h4>Happy Clients</h4>
                 </div>
                 <div class="number-item">
-                    <p><span class="counter">80</p>
-                    <p>Professionals</p>
+                    <p class="counter">80</p>
+                    <h4>Professionals</h4>
                 </div>
                 <div class="number-item">
                     <p class="counter">812</p>
-                    <p>Adopted Pets</p>
+                    <h4>Adopted Pets</h4>
                 </div>
                 <div class="number-item">
                     <p class="counter">90</p>
-                    <p>Awards</p>
+                    <h4>Awards</h4>
                 </div>
             </div>
         </div>
-
     </section> 
-
     <!-- End Number -->
     <!-- Plan -->
-
+    <section class="plan pb-50 pt-50">
+        <div class="title">
+            <h6 class="title-top ">Our Plans</h6>
+            <h3 class="title-bot pb-50">Affordable Packages</h3>
+        </div>
+        <div class="container">
+            <div class="card-deck mb-3 text-center">
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h6 class="my-0 font-weight-normal title-top">Free Package</h6>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$0<small class="text-muted">/month</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>5 Dog Walk</li>
+                    <li>3 Vet Visit</li>
+                    <li>3 Pet Spa</li>
+                    <li>Customer Support</li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+                </div>
+              </div>
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h4 class="my-0 font-weight-normal">Pro</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>5 Dog Walk</li>
+                    <li>3 Vet Visit</li>
+                    <li>3 Pet Spa</li>
+                    <li>Customer Support</li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+                </div>
+              </div>
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h4 class="my-0 font-weight-normal">Enterprise</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>5 Dog Walk</li>
+                    <li>3 Vet Visit</li>
+                    <li>3 Pet Spa</li>
+                    <li>Customer Support</li>
+                  </ul>
+                  <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+                </div>
+              </div>
+            </div>
+    </section>
     <!-- End Plan -->
     <!-- Video -->
 
