--- a/index.html
+++ b/index.html
@@ -45,58 +45,61 @@
     <!-- End Number -->
     <!-- Plan -->
     <section class="plan pb-50 pt-50">
-        <div class="title">
+        <div class="plan-title">
             <h6 class="title-top ">Our Plans</h6>
             <h3 class="title-bot pb-50">Affordable Packages</h3>
         </div>
-        <div class="container">
-            <div class="card-deck mb-3 text-center">
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h6 class="my-0 font-weight-normal title-top">Free Package</h6>
+        <div class="plan-content container">
+            <div class="card-content">
+              <!-- Gird-1 -->
+              <div class="card-item">
+                <div class="card-top">
+                  <h6 class=" title-top cl-b">Free Package</h6>
+                  <h4><label>$</label>0<span>/month</span></h4>
                 </div>
-                <div class="card-body">
-                  <h1 class="card-title pricing-card-title">$0<small class="text-muted">/month</small></h1>
-                  <ul class="list-unstyled mt-3 mb-4">
+                <div class="card-bot">
+                  <ul class="list-card">
                     <li>5 Dog Walk</li>
                     <li>3 Vet Visit</li>
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+                  <button type="button" class="btn-card">Buy Now</button>
                 </div>
               </div>
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h4 class="my-0 font-weight-normal">Pro</h4>
+              <!-- Gird-2 -->
+              <div class="card-item ">
+                <div class="card-top bg-t">
+                  <h5>Save 10% </h5>
+                  <h6>Standard Package</h6>
+                  <h4><label>$</label>39<span>/month</span></h4>
                 </div>
-                <div class="card-body">
-                  <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                  <ul class="list-unstyled mt-3 mb-4">
+                <div class="card-bot">  
+                  <ul class="list-card">
                     <li>5 Dog Walk</li>
                     <li>3 Vet Visit</li>
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+                  <button type="button" class="btn-card">Get Started</button>
                 </div>
               </div>
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h4 class="my-0 font-weight-normal">Enterprise</h4>
+              <!-- Gird-3 -->
+              <div class="card-item">
+                <div class="card-top">
+                  <h6 class=" title-top cl-b">Pro Package</h6>
+                  <h4><label>$</label>89<span>/month</span></h4>
                 </div>
-                <div class="card-body">
-                  <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                  <ul class="list-unstyled mt-3 mb-4">
+                <div class="card-bot">
+                  <ul class="list-card">
                     <li>5 Dog Walk</li>
                     <li>3 Vet Visit</li>
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+                  <button type="button" class="btn-card">Buy Now</button>
                 </div>
-              </div>
-            </div>
+              </div>  
     </section>
     <!-- End Plan -->
     <!-- Video -->
