--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card">Buy Now</button>
+                  <button type="button" class="btn-card btn-style border-btn-left">Buy Now</button>
                 </div>
               </div>
               <!-- Gird-2 -->
-              <div class="card-item ">
-                <div class="card-top bg-t">
-                  <h5>Save 10% </h5>
+              <div class="card-item mg-50 border-card">
+                <div class="card-top bg-t cl-w">
+                  <h5 >Save 10% </h5>
                   <h6>Standard Package</h6>
-                  <h4><label>$</label>39<span>/month</span></h4>
+                  <h4 class="cl-w"><label>$</label>39<span class="cl-w">/month</span></h4>
                 </div>
                 <div class="card-bot">  
                   <ul class="list-card">
@@ -81,7 +81,7 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card">Get Started</button>
+                  <button type="button" class="btn-card btn-style">Get Started</button>
                 </div>
               </div>
               <!-- Gird-3 -->
@@ -97,7 +97,7 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card">Buy Now</button>
+                  <button type="button" class="btn-card btn-style border-btn-left">Buy Now</button>
                 </div>
               </div>  
     </section>
