--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="plan-content container">
             <div class="card-content">
               <!-- Gird-1 -->
-              <div class="card-item">
+              <div class="card-item mg-r-20">
                 <div class="card-top">
                   <h6 class=" title-top cl-b">Free Package</h6>
                   <h4><label>$</label>0<span>/month</span></h4>
@@ -69,7 +69,7 @@
               </div>
               <!-- Gird-2 -->
               <div class="card-item mg-50 border-card">
-                <div class="card-top bg-t cl-w">
+                <div class="card-top bg-g cl-w">
                   <h5 >Save 10% </h5>
                   <h6>Standard Package</h6>
                   <h4 class="cl-w"><label>$</label>39<span class="cl-w">/month</span></h4>
@@ -85,7 +85,7 @@
                 </div>
               </div>
               <!-- Gird-3 -->
-              <div class="card-item">
+              <div class="card-item mg-l-20">
                 <div class="card-top">
                   <h6 class=" title-top cl-b">Pro Package</h6>
                   <h4><label>$</label>89<span>/month</span></h4>
