--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h6 class="title-top ">Our Plans</h6>
             <h3 class="title-bot pb-50">Affordable Packages</h3>
         </div>
-        <div class="plan-content container">
+        <div class="plan-content container pd-100">
             <div class="card-content">
               <!-- Gird-1 -->
               <div class="card-item mg-r-20">
@@ -64,7 +64,7 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card btn-style border-btn-left">Buy Now</button>
+                  <button type="button" class="btn-card btn-style ">Buy Now</button>
                 </div>
               </div>
               <!-- Gird-2 -->
@@ -81,7 +81,7 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card btn-style">Get Started</button>
+                  <button type="button" class="btn-card btn-style btn-center">Get Started</button>
                 </div>
               </div>
               <!-- Gird-3 -->
@@ -97,13 +97,30 @@
                     <li>3 Pet Spa</li>
                     <li>Customer Support</li>
                   </ul>
-                  <button type="button" class="btn-card btn-style border-btn-left">Buy Now</button>
+                  <button type="button" class="btn-card btn-style ">Buy Now</button>
                 </div>
               </div>  
     </section>
     <!-- End Plan -->
     <!-- Video -->
-
+    <section class="video" >
+      <div class="video-content  container pt-50 ">
+        <div class="title-video">
+          <h6 class="title-top" > Better pet nutrition.</h6>
+          <h3 class="title-bot" > The finest fresh food and all your pet needs.</h3>
+          <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet elit consec tetur adipisi elit. <br>
+          Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo officia.</p>
+        </div>
+        <div class="video-sub-content">
+          <img src="./asset/img/banner2.jpg" alt="video-popup">
+          <a href="#small-dialog">
+            <span class="video-play-icon">
+                <span class="fa fa-play"></span>
+            </span>
+        </a>
+        </div>
+      </div>
+    </section>
     <!-- End Video -->
     <!-- Testimonial -->
 
