--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
     </section>
     <!-- End Plan -->
     <!-- Video -->
-    <section class="video" >
-      <div class="video-content  container pt-50 ">
-        <div class="title-video ">
+    <section class="video">
+      <div class="new-block">
+        <div class="video-content  container pt-50 ">
+          <div class="title-video ">
           <h6 class="title-top" > Better pet nutrition.</h6>
           <h3 class="title-bot" > The finest fresh food and all your pet needs.</h3>
           <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet elit consec tetur adipisi elit. <br>
           Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo officia.</p>
-        </div>
-        
-        <div class="video-sub-content mg-t-50">
+          </div>
+          <div class="video-sub-content mg-t-50">
           <div class="position-relative">
             <img src="./asset/img/banner2.jpg" alt="video-popup">
             <a href="#small-dialog" class="popup-with-zoom-anim text-center position-absolute" >
@@ -127,10 +127,11 @@
               <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
           </div>
-        </div>
-         <div id="small-dialog" class="zoom-anim-dialog dis-none">
+          </div>
+          <div id="small-dialog" class="zoom-anim-dialog dis-none">
             <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        </div>
+          </div>
+        </div>  
       </div>
     </section>
     <!-- End Video -->
