--- a/services.html
+++ b/services.html
@@ -131,7 +131,7 @@
             <!-- Row-->
             <div class="content-photo row">
               <div class="services-img">
-                <a href="#"><img src="./asset/img/g1 (1).jpg" class="img-fluid" alt=""></a>
+                <a href="#"><img src="./asset/img/g1.jpg" class="img-fluid" alt=""></a>
               </div>
               <div class="services-title text-left pd-l">
                 <h6 class="sub-title">01</h6>
