--- a/services.html
+++ b/services.html
@@ -7,12 +7,14 @@
     <title>Document</title>
 
      <!-- Google fonts -->  
-    <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style>
     *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }    
     body {
       margin: 0;
@@ -90,6 +92,7 @@
       display: inline-block;
       text-transform: capitalize;
       text-decoration: none;
+      font-family: 'Jost', sans-serif;
     }
     a.btn-read:hover {
       color: #189A46;
