--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,9 @@
       text-align: left;
       background-color: #fff;
     }
+    div{
+      display: block;
+    }
     .container {
       width: 100%;
       max-width: 1150px;
@@ -50,7 +53,6 @@
       grid-template-columns:repeat( 3,1fr);
       max-width: 1150px;
       gap: 30px;
-   
     }
     .text-left {
       text-align: left !important;
@@ -81,28 +83,34 @@
       font-size: 60px;
     } 
 
-    .container-img img{
+    img.img-fluid {
+    margin-bottom: 30px;
+    }
+
+    .item {
       position: relative;
-      margin: 0px;
       overflow: hidden;
     }
-    .container-img img:hover:before {
+    .item::before {
+      content: "";
+      width: 50%;
+      height: 100%;
       position: absolute;
       top: 0;
       left: -100%;
-      z-index: 2;
       display: block;
-      content: '';
-      width: 50%;
-      height: 100%;
-      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+      background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.3) 100%
+    );
       transform: skewX(-25deg);
-}
-    /* .container-img img:hover::before {
-      -webkit-animation: shine .75s;
-      animation: shine .75s;
-    } */
+      transition: all 0.75s;
+    }
 
+    .item:hover::before {
+      left: 125%;
+    }
 
 
 
@@ -118,41 +126,41 @@
                 <h3 class="bot-title">Latest Gallery</h3>
             </div>
 
-            <div class="container-img grid nospace">
-              <div class="col-img">
+            <div class="container-img grid">
+              <div class="col-img ">
                 <a href="./asset/img/g1.jpg" data-lightbox="example-set" class=""
                   data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g1.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g1.jpg" alt="product" class="img-fluid "></div>
                 </a>
                 <a href="./asset/img/g2.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g2.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g2.jpg" alt="product" class="img-fluid"></div>
                 </a>
                 <a href="./asset/img/g7.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g7.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g7.jpg" alt="product" class="img-fluid"></div>
                 </a>
               </div>
               <div class="col-img">
                 <a href="./asset/img/g3.jpg" data-lightbox="example-set" class=""
                   data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g3.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g3.jpg" alt="product" class="img-fluid"></div>
                 </a>
                 <a href="./asset/img/g4.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g4.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g4.jpg" alt="product" class="img-fluid"></div>
                 </a>
                 <a href="./asset/img/g8.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g8.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g8.jpg" alt="product" class="img-fluid"></div>
                 </a>
               </div>
               <div class="col-img">
                 <a href="./asset/img/g5.jpg" data-lightbox="example-set" class=""
                   data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g5.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g5.jpg" alt="product" class="img-fluid"></div>
                 </a>
                 <a href="./asset/img/g6.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g6.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g6.jpg" alt="product" class="img-fluid"></div>
                 </a>
                 <a href="./asset/img/g9.jpg" data-lightbox="example-set" class="" data-title="lorem ipsum dolor sit amet">
-                    <img src="./asset/img/g9.jpg" alt="product" class="img-fluid">
+                    <div class="item"><img src="./asset/img/g9.jpg" alt="product" class="img-fluid"></div>
                 </a>
               </div>
             </div>
