--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
           <div class="video-sub-content mg-t-50">
           <div class="position-relative">
 
-            <img class="open-popup-link" src="./asset/img/banner2.jpg" alt="">
-            <a href="#small-dialog" class="open-popup-link text-center mfp-hide position-absolute" >
+            <!-- <img class="open-popup-link" src="./asset/img/banner2.jpg" alt=""> -->
+            <a href="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="open-popup-link text-center mfp-hide position-absolute" >
             <span class="video-play-icon"><span class="fa fa-play"></span></span>
             </a>
-
+<!-- 
             <div id="small-dialog" class="open-popup-link dis-none mfp-hide">
               <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
+            </div> -->
           </div>
 
           </div>
-          <div id="small-dialog" class="open-popup-link dis-none mfp-hide">
+          <!-- <div id="small-dialog" class="open-popup-link dis-none mfp-hide">
             <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-          </div>
+          </div> -->
         </div>  
       </div>
     </section>
@@ -159,10 +159,21 @@
   <!-- video -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-      $('.open-popup-link').magnificPopup({
-        type:'inline',
-        midClick: true
-      });
+      //   $(document).ready(function() {
+      //   $('.open-popup-link').magnificPopup({type:'image'});
+      // });
+      iframe: {
+         markup: '<div class="mfp-iframe-scaler">'+
+            '<div class="mfp-close"></div>'+
+            '<iframe class="mfp-iframe" frameborder="0" allowfullscreen></iframe>'+
+          '</div>', // HTML markup of popup, `mfp-close` will be replaced by the close button
+
+  patterns: {
+    vimeo: {
+      index: 'vimeo.com/',
+      id: '/',
+      src: '//player.vimeo.com/video/%id%?autoplay=1'
+    },
     </script>
 
 
