--- a/index.html
+++ b/index.html
@@ -118,22 +118,13 @@
           Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo officia.</p>
           </div>
           <div class="video-sub-content mg-t-50">
-          <div class="position-relative">
-
-            <!-- <img class="open-popup-link" src="./asset/img/banner2.jpg" alt=""> -->
-            <a href="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="open-popup-link text-center mfp-hide position-absolute" >
-            <span class="video-play-icon"><span class="fa fa-play"></span></span>
-            </a>
-<!-- 
-            <div id="small-dialog" class="open-popup-link dis-none mfp-hide">
-              <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div> -->
+            <div class="position-relative">
+              <img class="open-popup-link" src="./asset/img/banner2.jpg" alt="">
+                <a href="https://player.vimeo.com/video/101587706" class="open-popup-link text-center mfp-hide position-absolute" >
+                <span class="video-play-icon"><span class="fa fa-play"></span></span>
+              </a>
+            </div>  
           </div>
-
-          </div>
-          <!-- <div id="small-dialog" class="open-popup-link dis-none mfp-hide">
-            <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-          </div> -->
         </div>  
       </div>
     </section>
@@ -159,23 +150,10 @@
   <!-- video -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-      //   $(document).ready(function() {
-      //   $('.open-popup-link').magnificPopup({type:'image'});
-      // });
-      iframe: {
-         markup: '<div class="mfp-iframe-scaler">'+
-            '<div class="mfp-close"></div>'+
-            '<iframe class="mfp-iframe" frameborder="0" allowfullscreen></iframe>'+
-          '</div>', // HTML markup of popup, `mfp-close` will be replaced by the close button
-
-  patterns: {
-    vimeo: {
-      index: 'vimeo.com/',
-      id: '/',
-      src: '//player.vimeo.com/video/%id%?autoplay=1'
-    },
+      $(document).ready(function() {
+      $('.open-popup-link').magnificPopup({type:'inline'});
+      });
     </script>
-
 
     <!-- JS BS 4 -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
