--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <!-- Number -->
     <section class="number pb-50 pt-50">
         <div class="container">
-            <div class="number-content">
-                <div class="number-item">
+            <div class="row number-content">
+                <div class="col-lg-3 col-6  number-item">
                     <p class="counter">730</p>
                     <h4>Happy Clients</h4>
                 </div>
-                <div class="number-item">
+                <div class="col-lg-3 col-6  number-item">
                     <p class="counter">80</p>
                     <h4>Professionals</h4>
                 </div>
-                <div class="number-item">
+                <div class="col-lg-3 col-6  number-item">
                     <p class="counter">812</p>
                     <h4>Adopted Pets</h4>
                 </div>
-                <div class="number-item">
+                <div class="col-lg-3 col-6  number-item">
                     <p class="counter">90</p>
                     <h4>Awards</h4>
                 </div>
@@ -110,7 +110,7 @@
     <!-- Video -->
     <section class="video">
       <div class="new-block">
-        <div class="video-content  container pt-50 ">
+        <div class="video-content  container  ">
           <div class="title-video ">
           <h6 class="title-top" > Better pet nutrition.</h6>
           <h3 class="title-bot" > The finest fresh food and all your pet needs.</h3>
