--- a/blog.html
+++ b/blog.html
@@ -308,7 +308,17 @@
       color: #189A46;
       cursor: pointer
     }
-
+    @media  (max-width :980px ){
+        .card{
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    }
+    @media  (max-width :740px ) {
+      .card{
+        margin: 0 40px;
+      }
+    }
 
     </style>
 </head>
