--- a/services.html
+++ b/services.html
@@ -268,6 +268,14 @@
       cursor: pointer
     }
     
+
+    @media  (max-width :980px ){
+        .content-photo{
+          margin-top: 40px;
+          padding-bottom: 40px;
+          align-items: center;
+        }
+    }
     </style>
 
 </head>
