home about contact chua responsive

--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
     />
 
     <!-- MY CSS  -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./asset/style.css" />
 
     <style>
       /* PAGE INTRO */
       .page-intro {
         margin-top: 90px;
-        background: url(./img/banner4.jpg) no-repeat center;
+        background: url(./asset/img/banner4.jpg) no-repeat center;
         background-size: cover;
         position: relative;
         align-items: center;
